Changes in 22.3
================
2006-04-05 Karel Zak
	* fuser return code set correcly in silent mode
	* fuser -l doesnt complain but list signal names only

2006-03-24 Craig Small
	* Updated Bulgarian and Italian PO files
	* Added Japanese and Hungarian PO files
	* Moved some NEWS into README
	* Removed killall flag from NEWS, its really OLDS
	* fuser -n tcp port,host,host2 parses correctly

Changes in 22.2
===============
2006-03-09 Craig Small
	* Updated Nowegian and Vietnamese PO files

2006-03-07 Craig Small
	* Updated Polish and Dutch PO files

2006-01-27 Craig Small
	* Unix sockets work on all hosts now, including ones that don't have
	network device set to 0.
	* TCP/UDP6 sockets are found a bit better.
	* Makefile changed so signames builds in all locales. Thanks to Mike
	  Frysinger for the patch.
	* Return code works


2006-01-23 Craig Small
	* Updated Swedish, Vietnamese and Italian PO files
	* Minor fixes for some error messages, thanks to Benno.


2006-01-13 Craig Small
	* Updated Polish and dutch PO files
	* Added Bulgarian PO file

Changes in 22.1
===============
2006-01-12 Craig Small
	* Updated German PO file Debian #313934
	* Updated Swedish PO file

2006-01-04 Craig Small
	* fuser signals eg -INT work better
	* removed space out of fuser man page for -signal

2005-12-16 Craig Small
	* fuser -s flag works Debian #344901
	* fix grep lines in Makefile for i386 arches Debian #344172
	* Updsated Polish PO file

Changes in 21.9
===============
2005-12-16 Craig Small 
	* Fixed install-exec-hook so only symlink pstree.x11 if file does not
	exist already.
	* Updated Vietnamese PO file

2005-12-02 Karel Zak
	* buffer overflow in killall scanf removed

2005-11-26 Paul Martin
	* Fixed segfault in pstree -a Debian #338108

2005-11-22 Craig Small
	* fuser can not use IPv6, for things like uClibc
	* configure has --disable-ipv6 for above

2005-11-15 Craig Small
	* fuser finds unix sockets. Debian #338868

2005-11-05 Rene Rebe <rene@exactcode.de>