@@ -13,8 +13,7 @@ fuser \- identify processes using files or sockets
 .RB [ \- \fIsignal
 ] ]
 .RB [ \-muvf ]
-.I name
-...
+.IR name " ..."
 .br
 .B fuser
 .RB \-l
